Fix prev week btn. Add dividers between day columns. Adjust position of arrow btns. Fix truncating completed task.

--- a/timely/static/style/base.css
+++ b/timely/static/style/base.css
@@ -127,6 +127,12 @@ h1, h2, h3, h4, h5 {
 
 .week-day {
     width: calc(100%/7);
+    border-style: solid;
+    border-width: 0px 3px 0px 0px;
+    border-color: #e5e5e5;
+}
+.week-day:last-child {
+    border-style: none;
 }
 
 .nav-icon{
@@ -139,16 +145,17 @@ h1, h2, h3, h4, h5 {
 .arrow-left-icon{
     position: absolute;
     top: 18px;
-    left: -10px;
+    left: 8px;
 }
 
 .arrow-right-icon{
     position: absolute;
     top: 18px;
-    right: -10px;
+    right: 8px;
 }
 .arrow-container{
     position: relative;
+    z-index: 3;
 }
 
 .icon-spacer {
